GNOME Bugzilla – Bug 785318
GtkActionBar: g_object_class_install_properties() is not called
Last modified: 2017-07-25 09:25:25 UTC
Commit https://git.gnome.org/browse/gtk+/commit/?id=3d5a62a0c9ea5fbc25ec952cc9c72e0c3da18ce4 added the first property to GtkActionBar, but that commit did not add a call to g_object_class_install_properties(). I suppose it was a mistake. GtkActionBar:revealed is not a full-blown property.
Created attachment 356283 [details] [review] patch: actionbar: Call g_object_class_install_properties()
Review of attachment 356283 [details] [review]: oops, ok