actionbar: Call g_object_class_install_properties()

https://bugzilla.gnome.org/show_bug.cgi?id=785318