gtk/gtkactionbar.c
@@ -68,6 +68,7 @@ enum {
 };
 
 enum {
+  PROP_0,
   PROP_REVEALED,
   LAST_PROP
 };
@@ -397,6 +398,8 @@ gtk_action_bar_class_init (GtkActionBarClass *klass)
                           P_("Controls whether the action bar shows its contents or not"),
                           TRUE,
                           GTK_PARAM_READWRITE|G_PARAM_EXPLICIT_NOTIFY);
+
+  g_object_class_install_properties (object_class, LAST_PROP, props);
 
   gtk_widget_class_set_accessible_role (widget_class, ATK_ROLE_PANEL);
   gtk_widget_class_set_css_name (widget_class, "actionbar");
